update GroupMapper & GroupController